# QuartzIO

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: command.h
include/QuartzIO/: IModule.h  datatypes.h
include/QuartzIO/modules/: CpuModule.h  FileSystemModule.h  KernelModule.h  MemoryModule.h  NetworkModule.h  StorageModule.h
src/: main.cpp
src/core/: command.cpp
src/modules/: IModule.h
src/modules/cpu/: CpuModule.cpp
src/modules/filesystem/: FileSystemModule.cpp  FileSysytemModule.cpp
src/modules/kernel/: KernelModule.cpp
src/modules/memory/: MemoryModule.cpp
src/modules/net/: NetworkModul.cpp  NetworkModule.cpp
src/modules/storage/: StorageModule.cpp  StorageModule.h  lsblk_parser.cpp  lsblk_parser.h
